Fixed Spacing

--- a/client/src/components/About/index.css
+++ b/client/src/components/About/index.css
@@ -29,10 +29,12 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 50px;
 }
 .Profiles{
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 .Profile{
     display: flex;
@@ -41,6 +43,7 @@
     flex-direction: column;
     padding: 30px;
     padding-top: 0;
+    margin: 25px;
 }
 .Name{
     padding: 0;
@@ -53,7 +56,7 @@
     font-style: italic;
 }
 .about-image{
-    width: 40%;
+    width: 50%;
 }
 .Left-Info-Text{
     width: 450px;
